--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "botkit": "^0.4.2",
+    "botkit-storage-postgres": "^0.1.0",
     "os": "^0.1.1"
   }
 }
