--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node main.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "beepboop-botkit": "^1.4.1",
     "botkit": "^0.4.2",
     "os": "^0.1.1"
   }
