--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceRoot}/main_nick.js",
+            // "program": "${workspaceRoot}/main_nick.js",
+            "program": "${workspaceRoot}/main.js",
             "cwd": "${workspaceRoot}"
         },
         {
